@@ -1,4 +1,4 @@
-<pre>
+
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -109,8 +109,6 @@ public class FullStackApplication {
     }
 }
 
+RUN/DEBUG configuration->
+VM options: --add-opens java.base/java.lang=ALL-UNNAMED
 
-![image](https://github.com/user-attachments/assets/59e5d87b-18d3-4fbc-961e-e668d1cb817d)
-
-
-</pre>
